--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,22 @@ p{
   font-size: 30px;
   color:#cc0000;
 }
+
+.game-board{
+  width: 300px;
+  height: 300px;
+  background-color: #00cc00;
+  position: relative;
+}
+.snake-part{
+  width: 20px;
+  height: 20px;
+  background-color: #cc0000;
+  position: absolute;
+}
+.game-food{
+  width: 20px;
+  height: 20px;
+  background-color: #0000cc;
+  position: absolute;
+}
