--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,21 @@ p{
 }
 
 .game-board{
-  width: 300px;
-  height: 300px;
+  width: 100vw;
+  height: 100vw;
   background-color: #00cc00;
   position: relative;
+  overflow: hidden;
 }
 .snake-part{
-  width: 20px;
-  height: 20px;
+  width: 3%;
+  height: 3%;
   background-color: #cc0000;
   position: absolute;
 }
 .game-food{
-  width: 20px;
-  height: 20px;
+  width: 3%;
+  height: 3%;
   background-color: #0000cc;
   position: absolute;
 }
