--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,64 @@ p{
   color:#cc0000;
 }
 
+.buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
 .game-board{
   width: 100vw;
   height: 100vw;
   background-color: #00cc00;
   position: relative;
   overflow: hidden;
+  margin: 0 auto;
+}
+.game-board svg{
+  width: 100%;
+  height: 100%;
+  opacity: .2;
+}
+.game-board button{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotate(45deg);
+  opacity: 0;
+}
+
+.game-board button.up{
+  top: -70%;
+  left: 0;
+}
+
+.game-board button.down{
+  top: 70%;
+  left: 0;
+}
+
+.game-board button.left{
+  top: 0;
+  left: -70%;
+}
+
+.game-board button.right{
+  top: 0;
+  left: 70%;
+}
+
+@media only screen and (min-width: 768px) {
+  .game-board{
+    width: 40vw;
+    height: 40vw;
+  }
+  .game-board button{
+    display: none;
+  }
+  .game-board svg{
+    display: none;
+  }
 }
 .snake-part{
   width: 3%;
